deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-convert-service
spec:
  selector:
    app: word-convert
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
